--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
 <body ontouchstart="">  
 	{% include nav.html %}
 
-    {{ content }
+    {{ content }}
        {% include footer.html %}
+			
     <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key={{ page.id }} data-title={{ page.title }} data-url=/{{ page.url }}></div>
 <!-- 多说评论框 end -->
