--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,6 +82,8 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
+                    Contart Email:zinglix@126.com
+                    <br>
                     Theme by <a href="http://huangxuan.me">Hux</a> |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
