--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords"  content="{{ site.keyword }}">
+    <META name="title" CONTENT="ZingLix Blog">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
     <meta name="baidu-site-verification" content="2aznobFlmk" />
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
