--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta name="keywords"  content="{{ site.keyword }}">
     <META name="title" CONTENT="ZingLix Blog">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
-    <meta name="baidu-site-verification" content="2aznobFlmk" />
+    <meta name="baidu-site-verification" content="BwpbNOiwtn" />
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
     <!-- Web App Manifest -->
