--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,7 +82,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Contact Email:zinglix@126.com
+                    Contact Email:zinglix.liu@gmail.com
                     <br>
                     Theme by <a href="http://huangxuan.me">Hux</a> |
                     <iframe
