--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,9 +81,7 @@ layout: default
                     {% endif %}
                 </ul>
 
-
-
-				{% if site.Client_ID and site.Client_Secret %}
+				<!-- Gitment -->
 				<div id="container"></div>
 				<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 				<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
@@ -99,15 +97,7 @@ layout: default
 				})
 				gitment.render('container')
 				</script>
-				{% endif %}
 
-                {% if site.disqus_username %}
-                <!-- disqus 评论框 start -->
-                <div class="comment">
-                    <div id="disqus_thread" class="disqus-thread"></div>
-                </div>
-                <!-- disqus 评论框 end -->
-                {% endif %}
 
             </div>  
 
@@ -167,23 +157,6 @@ layout: default
 </article>
 
 
-
-{% if site.disqus_username %}
-<!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = "{{site.disqus_username}}";
-    var disqus_identifier = "{{page.id}}";
-    var disqus_url = "{{site.url}}{{page.url}}";
-
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<!-- disqus 公共JS代码 end -->
-{% endif %}
 
 
 {% if site.anchorjs %}
