modify code block style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,8 +85,8 @@ layout: default
 
 				<!-- Gitment -->
 				<div id="container"></div>
-				<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-				<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+				<link rel="stylesheet" href="/css/gitment.css">
+				<script src="/js/gitment.browser.js"></script>
 				<script>
 				var gitment = new Gitment({
 					//id: '页面 ID', // 可选。默认为 location.href
@@ -101,7 +101,7 @@ layout: default
 				</script>
 
 
-            </div>  
+            </div>
 
     <!-- Side Catalog Container -->
         {% if page.catalog %}
