modify baidu verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
     <meta name="baidu-site-verification" content="BwpbNOiwtn" />
     <meta name="baidu-site-verification" content="VdnV4C1X9u" />
+    <meta name="baidu-site-verification" content="qctyjCchEd" />
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
     <!-- Web App Manifest -->
