--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -100,17 +100,20 @@
   text-overflow: ellipsis;
 }
 .side-catalog .catalog-body .h1_nav,
-.side-catalog .catalog-body .h2_nav,
-.side-catalog .catalog-body .h3_nav {
+.side-catalog .catalog-body .h2_nav {
   margin-left: 0;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: bold;
+}
+.side-catalog .catalog-body .h3_nav {
+  margin-left: 10px;
+  font-size: 13px;
 }
 .side-catalog .catalog-body .h4_nav,
 .side-catalog .catalog-body .h5_nav,
 .side-catalog .catalog-body .h6_nav {
-  margin-left: 10px;
-  font-size: 12px;
+  margin-left: 20px;
+  font-size: 13px;
 }
 .side-catalog .catalog-body .h4_nav a,
 .side-catalog .catalog-body .h5_nav a,
