--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -172,7 +172,7 @@ layout: default
     async("//cdnjs.cloudflare.com/ajax/libs/anchor-js/1.1.1/anchor.min.js",function(){
         anchors.options = {
           visible: 'always',
-          placement: 'right',
+          placement: 'middle',
           icon: '#'
         };
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
