--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -144,7 +144,7 @@ body {
   overflow-x: hidden;
 }
 p {
-  margin: 30px 0 0 10px;
+  margin: 30px 10px 0 10px;
 }
 h1,
 h2,
@@ -223,7 +223,7 @@ hr.small {
 pre,
 .table-responsive {
   -webkit-overflow-scrolling: touch;
-  margin: 30px 0 0 10px;
+  margin: 30px 10px 0 10px;
 }
 pre code {
   display: block;
@@ -1093,9 +1093,6 @@ img::-moz-selection {
 }
 .page-fullscreen footer .copyright a:hover {
   color: #ddd;
-}
-.highlighter-rouge {
-  margin: 30px 0 0 10px;
 }
 p.sidebar_description{
   margin: 30px 0 0 0;
