--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -91,7 +91,7 @@
                         src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true" >
                     </iframe>
                     <br>
-                    沪ICP备18012603号-1
+                    <a href="http://www.miitbeian.gov.cn">沪ICP备18012603号-1</a>
                 </p>
             </div>
         </div>
