--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,7 +81,7 @@ layout: default
                 </ul>
 
 				<!-- Gitment -->
-				<div id="container"></div>
+	<!--			<div id="container"></div>
 				<link rel="stylesheet" href="/css/gitment.css">
 				<script src="/js/gitment.browser.js"></script>
 				<script>
@@ -95,9 +95,23 @@ layout: default
 					},
 				})
 				gitment.render('container')
-				</script>
+                </script>-->
+                <div id="gitalk-container"></div>
+                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+                <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+            <script>
+                const gitalk = new Gitalk({
+  clientID: '{{site.Client_ID}}',
+  clientSecret: '{{site.Client_Secret}}',
+  repo: 'ZingLix.github.io',
+  owner: 'ZingLix',
+  admin: ['ZingLix'],
+  id: location.pathname,      // Ensure uniqueness and length less than 50
+  distractionFreeMode: false  // Facebook-like distraction free mode
+})
 
-
+gitalk.render('gitalk-container')
+            </script>
             </div>
 
     <!-- Side Catalog Container -->
