--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,37 +80,20 @@ layout: default
                     {% endif %}
                 </ul>
 
-				<!-- Gitment -->
-	<!--			<div id="container"></div>
-				<link rel="stylesheet" href="/css/gitment.css">
-				<script src="/js/gitment.browser.js"></script>
-				<script>
-				var gitment = new Gitment({
-					//id: '页面 ID', // 可选。默认为 location.href
-					 owner: 'ZingLix',
-					repo: 'ZingLix.github.io',
-					oauth: {
-					  client_id: '{{site.Client_ID}}',
-					  client_secret: '{{site.Client_Secret}}',
-					},
-				})
-				gitment.render('container')
-                </script>-->
                 <div id="gitalk-container"></div>
                 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
                 <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
             <script>
                 const gitalk = new Gitalk({
-  clientID: '{{site.Client_ID}}',
-  clientSecret: '{{site.Client_Secret}}',
-  repo: 'ZingLix.github.io',
-  owner: 'ZingLix',
-  admin: ['ZingLix'],
-  id: location.pathname,      // Ensure uniqueness and length less than 50
-  distractionFreeMode: false  // Facebook-like distraction free mode
-})
-
-gitalk.render('gitalk-container')
+                clientID: '{{site.Client_ID}}',
+                clientSecret: '{{site.Client_Secret}}',
+                repo: 'ZingLix.github.io',
+                owner: 'ZingLix',
+                admin: ['ZingLix'],
+                id: location.pathname,  
+                distractionFreeMode: false 
+                })
+                gitalk.render('gitalk-container')
             </script>
             </div>
 
