--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,7 +80,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license">License</a>
                     <br>
                     Contact Email:zinglix.liu@gmail.com
                     <br>
