--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,12 +18,18 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="{{ site.baseurl }}/">Home</a>
-                    </li>
-                    {% for page in site.pages %}{% if page.title %}
+                    </li>             
                     <li>
-                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+                        <a href="/about/">About</a>
                     </li>
-                    {% endif %}{% endfor %}
+                    
+                    <li>
+                        <a href="/portfolio/">Portfolio</a>
+                    </li>
+                    
+                    <li>
+                        <a href="/tags/">Tags</a>
+                    </li>
                 </ul>
             </div>
         </div>
