--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,30 @@
     <meta name="keywords"  content="{{ site.keyword }}">
     <META name="title" CONTENT="ZingLix Blog">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
+
+	    <!-- Open Graph -->
+        <meta property="og:title" content="{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}">
+        {% case page.layout %}
+        {% when 'post' %}
+        <meta property="og:type" content="article">
+        <meta property="og:description" content="{{ page.subtitle }}">
+        {% if page.date %}
+        <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%dT%H:%M:%SZ" }}">
+        {% endif %}
+        {% if page.author %}
+        <meta property="article:author" content="{{ page.author }}">
+        {% endif %}
+        {% for tag in page.tags %}
+        <meta property="article:tag" content="{{ tag }}">
+        {% endfor %}
+        {% else %}
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+        {% endcase %}
+        <meta property="og:image" content="{{ site.url }}{{ site.sidebar-avatar }}">
+        <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+        <meta property="og:site_name" content="{{ site.SEOTitle }}">
+
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
     <!-- Web App Manifest -->
@@ -24,8 +48,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}">
 
-    <!-- Pygments Github CSS -->
-    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
+
 
     <!-- Custom Fonts -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
