--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,12 +19,13 @@
                     <li>
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>             
+                    {% for page in site.pages %}
+                    {% if page.title and page.hide-in-nav != true %}
                     <li>
-                        <a href="/about/">About</a>
+                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                     </li>
-                    <li>
-                        <a href="/tags/">Tags</a>
-                    </li>
+                    {% endif %}
+                    {% endfor %}
                 </ul>
             </div>
         </div>
