--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
         <meta property="og:type" content="website">
         <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
         {% endcase %}
-        <meta property="og:image" content="{{ site.url }}{{ site.sidebar-avatar }}">
+        <meta property="og:image" content="{{ site.url }}/icon.png">
         <meta property="og:url" content="{{ site.url }}{{ page.url }}">
         <meta property="og:site_name" content="{{ site.SEOTitle }}">
 
