bugfix & new feature

--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -100,7 +100,7 @@
   text-overflow: ellipsis;
 }
 .side-catalog .catalog-body .h1_nav,
-.side-catalog .catalog-body .h2_nav, {
+.side-catalog .catalog-body .h2_nav {
   margin-left: 0;
   font-size: 14px;
   font-weight: bold;
@@ -509,12 +509,15 @@ pre.highlight {
 .highlighter-rouge .highlight pre {
   font-size: 14px;
   line-height: 1.5;
-  color: #ccc6c6;
+  color: rgb(100, 100, 100);
   background: transparent;
   border: 0;
   margin: 0;
   padding: 0;
   word-wrap: normal;
+}
+.highlighter-rouge .highlight .rouge-code pre {
+  color: #abb2bf;
 }
 .highlighter-rouge .highlight .table-responsive {
   margin: 0px;
@@ -523,6 +526,7 @@ pre.highlight {
 .highlighter-rouge .highlight .table {
   margin: 0px;
   table-layout: fixed;
+  border: 0;
 }
 .highlighter-rouge .highlight table > tbody > tr > td {
   margin: 0;
@@ -632,6 +636,10 @@ select.sel-lang {
   min-height: 28px;
   font-size: 14px;
 }
+.table  {
+  border: 2px solid #ddd;
+}
+
 table.table > tbody th,
 table.table > thead th,
 table.table > tbody td,
@@ -654,6 +662,12 @@ pre code {
   white-space: pre;
   word-wrap: normal;
 }
+code,
+kbd,
+pre,
+samp {
+  font-family: "Fira Code", Menlo, Monaco, Consolas, "Courier New", monospace;
+}
 .postlist-container {
   margin-bottom: 15px;
 }
@@ -671,6 +685,7 @@ pre code {
 .post-container h5,
 .post-container h6 {
   margin: 30px 0 10px;
+  line-height: 1.4;
 }
 .post-container h5 {
   font-size: 19px;
@@ -687,6 +702,20 @@ pre code {
 }
 .post-container h6 + p {
   margin-top: 5px;
+}
+@media screen and (max-width: 768px) {
+  .post-container h1 {
+    font-size: 30px;
+  }
+  .post-container h2 {
+    font-size: 24px;
+  }
+  .post-container h3 {
+    font-size: 21px;
+  }
+  .post-container h4 {
+    font-size: 19px;
+  }
 }
 .post-container ul,
 .post-container ol {
@@ -739,6 +768,10 @@ pre code {
   color: #cccccc;
   font-weight: normal;
   letter-spacing: 0.5px;
+}
+.post-container .anchorjs-link {
+  position: absolute;
+  padding-top: 1px;
 }
 @media only screen and (max-width: 767px) {
   /**
@@ -875,6 +908,26 @@ pre code {
     background: none;
   }
 }
+.navbar-custom.invert .navbar-toggle:active {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+.navbar-custom.invert .navbar-toggle .icon-bar {
+  background-color: #404040;
+}
+.navbar-custom.invert .navbar-brand {
+  color: #404040;
+}
+.navbar-custom.invert .navbar-brand:hover,
+.navbar-custom.invert .navbar-brand:focus {
+  color: #0085a1;
+}
+.navbar-custom.invert .nav li a {
+  color: #404040;
+}
+.navbar-custom.invert .nav li a:hover,
+.navbar-custom.invert .nav li a:focus {
+  color: #0085a1;
+}
 @media only screen and (min-width: 1170px) {
   .navbar-custom {
     -webkit-transition: background-color 0.3s;
@@ -932,6 +985,31 @@ pre code {
   -o-background-size: cover;
   margin-bottom: 0px;
   /* 0 on mobile, modify by Hux */
+}
+.intro-header.style-text {
+  background: none;
+}
+.intro-header.style-text .site-heading,
+.intro-header.style-text .post-heading,
+.intro-header.style-text .page-heading {
+  padding: 85px 0 20px;
+  color: #404040;
+}
+.intro-header.style-text .site-heading .subheading,
+.intro-header.style-text .post-heading .subheading,
+.intro-header.style-text .page-heading .subheading {
+  margin-bottom: 15px;
+}
+.intro-header.style-text .tags a,
+.intro-header.style-text .tags .tag {
+  border-color: #404040;
+  color: #404040;
+}
+.intro-header.style-text .tags a:hover,
+.intro-header.style-text .tags .tag:hover,
+.intro-header.style-text .tags a:active,
+.intro-header.style-text .tags .tag:active {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 @media only screen and (min-width: 768px) {
   .intro-header {
@@ -1015,7 +1093,7 @@ pre code {
   font-family: 'Lora', 'Times New Roman', serif;
   font-style: italic;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 16px;
 }
 .intro-header .post-heading .meta a {
   color: white;
@@ -1033,6 +1111,25 @@ pre code {
 }
 .post-preview > a {
   color: #404040;
+}
+.intro-header .header-img-credit {
+  position: absolute;
+  bottom: 6px;
+  right: 9px;
+  color: white;
+  opacity: 0.3;
+  font-size: 10px;
+  z-index: 1;
+}
+.intro-header .header-img-credit a {
+  color: white;
+}
+@media only screen and (min-width: 768px) {
+  .intro-header .header-img-credit {
+    font-size: 12px;
+    bottom: 10px;
+    right: 15px;
+  }
 }
 .post-preview > a:hover,
 .post-preview > a:focus {
