--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <!-- SNS Link -->
                 {% include sns-links.html center=true %}                
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license">License</a>
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license/">License</a>
                     <br>
                     Contact Email:zinglix.liu@gmail.com
                     <br>
