--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -1652,4 +1652,6 @@ img::-moz-selection {
 .page-fullscreen footer .copyright a:hover {
   color: #ddd;
 }
-
+::-webkit-scrollbar{
+  display:none;
+}
