--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license/">License</a>
                     <br>
-                    Contact Email:zinglix.liu@gmail.com
+                    Contact Email: me@zinglix.xyz
                     <br>
                     Theme by <a href="http://huangxuan.me">Hux</a> |
                     <iframe
