remove comment temporarily

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,13 @@
                         src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true" >
                     </iframe>
                     <br>
-                    <a href="http://www.miitbeian.gov.cn">沪ICP备18012603号-1</a>
+                    <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
+                    
+                    <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"
+                        ><img src="/img/beian.png" />
+                        沪公网安备 31011002004677号
+                    </a>
+                        
                 </p>
             </div>
         </div>
