--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,7 +54,7 @@ layout: default
                 id: location.pathname,  
                 distractionFreeMode: false 
                 })
-                gitalk.render('gitalk-container')
+                //gitalk.render('gitalk-container')
             </script>
             </div>
 
