--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license/">License</a> | Email: me@zinglix.xyz
 
                     <br>
-                    <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
+                    <a href="http://www.beian.miit.gov.cn">沪ICP备18012603号-1</a>
                                         <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"><img src="/img/beian.png"/>
                                             沪公网安备 31011002004677号
                                         </a>
