migrate mirror site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px"
                         src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
                     </iframe>
-                    | <a href="https://zinglix.dev">Mirror</a>
+                    | <a href="https://blog.zinglix.xyz">Mirror</a>
                 </p>
             </div>
         </div>
