update sns link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,7 +54,7 @@
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <!-- Custom Fonts -->
+    <link rel="stylesheet" href="/css/iconfont.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
         type="text/css">
-
 </head>
