--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,21 +4,22 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <!-- SNS Link -->
-                {% include sns-links.html center=true %}                
+                {% include sns-links.html center=true %}
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="/license/">License</a> | Email: me@zinglix.xyz
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | <a href="/license/">License</a>
+                    | <a href="https://blog.zinglix.xyz">Mirror</a>
 
                     <br>
                     <a href="http://www.beian.miit.gov.cn">沪ICP备18012603号-1</a>
-                                        <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"><img src="/img/beian.png"/>
-                                            沪公网安备 31011002004677号
-                                        </a>
+                    <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"><img
+                            src="/img/beian.png" />
+                        沪公网安备 31011002004677号
+                    </a>
                     <br>
-                    Theme by <a href="http://huangxuan.me">Hux</a> |
-                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
-                    </iframe>
-                    | <a href="https://blog.zinglix.xyz">Mirror</a>
+                    Email:
+                    <script type="text/javascript">
+                        document.write('me' + "@" + 'zinglix.xyz')
+                    </script> | Theme by <a href="http://huangxuan.me">Hux</a>
                 </p>
             </div>
         </div>
@@ -33,7 +34,9 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/hux-blog.min.js" | prepend: site.baseurl }}"></script>
-
+<script type="text/javascript">
+    document.write('joe@' + 'joemaller.com')
+</script>
 <!-- Service Worker -->
 {% if site.service-worker %}
 <script src="{{ "/js/snackbar.js" | prepend: site.baseurl }}"></script>
@@ -44,22 +47,22 @@
 <!-- async load function -->
 <script>
     function async(u, c) {
-      var d = document, t = 'script',
-          o = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
-      o.src = u;
-      if (c) { o.addEventListener('load', function (e) { c(null, e); }, false); }
-      s.parentNode.insertBefore(o, s);
+        var d = document, t = 'script',
+            o = d.createElement(t),
+            s = d.getElementsByTagName(t)[0];
+        o.src = u;
+        if (c) { o.addEventListener('load', function (e) { c(null, e); }, false); }
+        s.parentNode.insertBefore(o, s);
     }
 </script>
 
 {% if page.title == 'Archive' %}
 <!-- jquery.tagcloud.js -->
 <script>
-    async('{{ "/js/jquery.tagcloud.js" | prepend: site.baseurl }}',function(){
+    async('{{ "/js/jquery.tagcloud.js" | prepend: site.baseurl }}', function () {
         $.fn.tagcloud.defaults = {
             //size: {start: 1, end: 1, unit: 'em'},
-            color: {start: '#bbbbee', end: '#2f93b4'},
+            color: { start: '#bbbbee', end: '#2f93b4' },
         };
         $('#tag_cloud a').tagcloud();
     })
@@ -69,9 +72,9 @@
 
 <!--fastClick.js -->
 <script>
-    async("//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js", function(){
+    async("//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js", function () {
         var $nav = document.querySelector("nav");
-        if($nav) FastClick.attach($nav);
+        if ($nav) FastClick.attach($nav);
     })
 </script>
 
@@ -84,10 +87,12 @@
     var _gaDomain = '{{ site.ga_domain }}';
 
     // Originial
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', _gaId, _gaDomain);
     ga('send', 'pageview');
@@ -98,16 +103,16 @@
 <!-- Side Catalog -->
 {% if page.catalog %}
 <script type="text/javascript">
-    function generateCatalog (selector) {
-                // interop with multilangual 
-        if ('{{ page.multilingual }}'=='true') {
+    function generateCatalog(selector) {
+        // interop with multilangual 
+        if ('{{ page.multilingual }}' == 'true') {
             _containerSelector = 'div.post-container.active'
         } else {
             _containerSelector = 'div.post-container'
         }
 
         // init
-        var P = $(_containerSelector),a,n,t,l,i,c;
+        var P = $(_containerSelector), a, n, t, l, i, c;
         {% if page.cataloglimit %}
         a = P.find('h1,h2,h3');
         {% else if %}
@@ -117,10 +122,10 @@
         $(selector).html('')
         a.each(function () {
             n = $(this).prop('tagName').toLowerCase();
-            i = "#"+$(this).prop('id');
+            i = "#" + $(this).prop('id');
             t = $(this).text();
-            c = $('<a href="'+i+'" rel="nofollow">'+t+'</a>');
-            l = $('<li class="'+n+'_nav"></li>').append(c);
+            c = $('<a href="' + i + '" rel="nofollow">' + t + '</a>');
+            l = $('<li class="' + n + '_nav"></li>').append(c);
             $(selector).append(l);
         });
         return true;
@@ -129,7 +134,7 @@
     generateCatalog(".catalog-body");
 
     // toggle side catalog
-    $(".catalog-toggle").click((function(e){
+    $(".catalog-toggle").click((function (e) {
         e.preventDefault();
         $('.side-catalog').toggleClass("fold")
     }))
@@ -170,17 +175,17 @@
     // window.addEventListener('hashchange', _render);
 
     // handle render
-    function _render(_hash){
+    function _render(_hash) {
         var _hash = _hash || window.location.hash;
         // en
-        if(_hash == "#en"){
+        if (_hash == "#en") {
             $select.selectedIndex = 1;
             $en.style.display = "block";
             $en.classList.add("active");
             $zh.style.display = "none";
             $zh.classList.remove("active");
-        // zh by default
-        }else{
+            // zh by default
+        } else {
             // not trigger onChange, otherwise cause a loop call.
             $select.selectedIndex = 0;
             $zh.style.display = "block";
@@ -193,10 +198,10 @@
     }
 
     // handle select change
-    function onLanChange(index){
-        if(index == 0){
+    function onLanChange(index) {
+        if (index == 0) {
             _hash = "#zh"
-        }else{
+        } else {
             _hash = "#en"
         }
         _render(_hash)
