--- a/_includes/featured-tags.html
+++ b/_includes/featured-tags.html
@@ -9,16 +9,22 @@
     {% endif %}
     <h5><a href="{{'/archive/' | prepend: site.baseurl }}">FEATURED TAGS</a></h5>
     <div class="tags">
-        {% capture tags %}
-        {% for tag in site.tags %}{% if tag[1].size > site.featured-condition-size %}
+        <a href="{{ site.baseurl }}/papernote/" title="论文笔记"
+            >论文笔记
+        </a>
+        {%- capture tags -%}
+        {%- for tag in site.tags -%}{%- if tag[1].size > site.featured-condition-size -%}
+                {%- assign identifier = tag[0] | slice: -3, 3 -%}
+                {%- if identifier != "_pn" -%}
                 <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}" 
                     href="{{ site.baseurl }}/archive/?tag={{ tag[0] | url_encode }}"
                     title="{{ tag[0] }}"
                     rel="{{ tag[1].size }}">{{ tag[0] }}
-                </a>
-            {% endif %}{% endfor %}
-        {% endcapture %}
-        {{ tags | split:'</a>' | sort | join:'</a>' }}
+                </a>__SEPERATOR__
+                {%- endif -%}
+            {%- endif -%}{%- endfor -%}
+        {%- endcapture -%}
+        {{ tags | split:'__SEPERATOR__' | sort }}
 </div>
 </section>
 {% endif %}
