--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,6 +55,5 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="/css/iconfont.css">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
-        type="text/css">
+    <link href="/css/fontawesome.min.css" rel="stylesheet" type="text/css">
 </head>
