--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -30,9 +30,9 @@
     <li>
       <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
         <span class="fa-stack fa-lg">
-          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fas fa-circle fa-stack-2x"></i>
 
-          <i class="fa  fa-stack-1x fa-inverse"><span class="iconfont icon-zhihu"></span></i>
+          <i class="fab fa-stack-1x fa-inverse"><span class="iconfont icon-zhihu"></span></i>
         </span>
       </a>
     </li>
@@ -61,8 +61,8 @@
     <li>
       <a target="_blank" href="https://github.com/{{ site.github_username }}">
         <span class="fa-stack fa-lg">
-          <i class="fa fa-circle fa-stack-2x"></i>
-          <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+          <i class="fas fa-circle fa-stack-2x"></i>
+          <i class="fab fa-github fa-stack-1x fa-inverse"></i>
         </span>
       </a>
     </li>
