--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,11 +48,12 @@
     <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/hux-blog.1.min.css" | prepend: site.baseurl }}">
 
     <script data-ad-client="ca-pub-5810024348822097" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <!-- Custom Fonts -->
-    <link href="/css/fontawesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/css/iconfont.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.min.css" rel="stylesheet" type="text/css">
 </head>
