--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,9 +30,11 @@
                     </li>
                     {% endif %}
                     {% endfor %}
-                    <li class="search-icon">
-                        <a href="javascript:void(0)" class="fas fa-search"></a>
-                    </li>
+                        <li class="search-icon">
+                            <a href="javascript:void(0)">
+                                <i class="fa fa-search"></i>
+                            </a>
+                        </li>
                 </ul>
             </div>
         </div>
