--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 <!-- <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script> -->
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ "/js/hux-blog.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/hux-blog.1.min.js" | prepend: site.baseurl }}"></script>
 <!-- Service Worker -->
 {% if site.service-worker %}
 <script src="{{ "/js/snackbar.js" | prepend: site.baseurl }}"></script>
