--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,9 +94,9 @@ layout: default
 <script>
     async("/js/anchor.min.js",function(){
         anchors.options = {
-          visible: 'always',
-          placement: 'middle',
-          icon: '#'
+          visible: 'hover',
+          placement: 'right',
+
         };
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
     })
