add progress bar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
 </footer>
 
 <!-- jQuery -->
-<script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
+<!-- <script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script> -->
 <!-- script pointing to jekyll-search.js -->
 <script src="/js/simple-jekyll-search.min.js"></script>
 <!-- Bootstrap Core JavaScript -->
@@ -93,7 +93,8 @@
         s.parentNode.insertBefore(hm, s);
     })();
 </script>
-
+    <script data-ad-client="ca-pub-5810024348822097" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Side Catalog -->
 {% if page.catalog %}
 <script type="text/javascript">
