update edit icon

--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -50,7 +50,7 @@ header.intro-header .header-mask{
                 {% comment %} always create a h2 for keeping the margin {% endcomment %}
                 <h2 class="subheading">{{ page.subtitle }}</h2>
                 <span class="meta">
-                    <i style="margin-right: 2px;" class="fas fa-user"></i>
+                    <i style="margin-right: 2px;" class="far fa-edit"></i>
                     {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %}
                     <i style="margin-left: 12px;margin-right: 2px;" class="far fa-calendar-alt"></i>
                     {{ page.date | date: "%B %-d, %Y" }}
