fix page description

--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -124,7 +124,7 @@ header iframe{
     <div class="site-heading">
     {% endif %}
       <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
-      <span class="subheading">{{ page.description }}</span>
+      <span class="subheading">{{ page.subtitle }}</span>
     </div>
   </div>
 </div>
