update mirror url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                 {% include sns-links.html center=true %}
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | <a href="/license/">License</a>
-                    | <a href="https://blog.zinglix.xyz">Mirror</a>
+                    | <a href="https://blog.zinglix.xyz{{page.url}}">Mirror</a>
 
                     <br>
                     <a href="http://www.beian.miit.gov.cn">沪ICP备18012603号-1</a>
