--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,8 @@
 
                     <br>
                     <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
-                    <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677"><img
-                            src="/img/beian.png" />沪公网安备 31011002004677号
+                    <img src="/img/beian.png" />
+                    <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677">沪公网安备 31011002004677 号
                     </a>
                     <br>
                     Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a> | Theme by <a href="http://huangxuan.me">Hux</a>
