--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,10 +12,12 @@
                     <br>
                     <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
                     <img src="/img/beian.png" />
-                    <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677">沪公网安备 31011002004677 号
+                    <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677">沪公网安备
+                        31011002004677 号
                     </a>
                     <br>
-                    Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a> | Theme by <a href="http://huangxuan.me">Hux</a>
+                    Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a> | Theme by <a
+                        href="http://huangxuan.me">Hux</a>
                 </p>
             </div>
         </div>
@@ -30,10 +32,10 @@
 <!-- <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script> -->
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ "/js/hux-blog.1.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ " /js/hux-blog.1.min.js" | prepend: site.baseurl }}"></script>
 <!-- Service Worker -->
 {% if site.service-worker %}
-<script src="{{ "/js/snackbar.js" | prepend: site.baseurl }}"></script>
+<script src="{{ " /js/snackbar.js" | prepend: site.baseurl }}"></script>
 {% endif %}
 
 
@@ -82,6 +84,18 @@
     ga('send', 'pageview');
 </script>
 {% endif %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+{% if site.gtag_id %}
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.gtag_id }}"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', '{{ site.gtag_id }}');
+</script>
+{% endif %}
+
 <!-- Baidu Analytics -->
 <script>
     var _hmt = _hmt || [];
