add ads expermental

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -92,7 +92,9 @@ layout: default
         </div>
     </div>
 </article>
-
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 {% if site.anchorjs %}
 <!-- async load function -->
 <script>
